<resources>
    <string name="app_name">Medical Device</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="patientname">Patient Name : </string>


        <string name="message">Address</string>
        <string name="send">Next</string>
        <string name="email">Email:</string>
        <string name="name">Name</string>
        <string name="mobno">Mobile Number:</string>
        <string name="age">Age</string>
    <string name="patient_details">Patient Details</string>
    <string name="searchdetails">Search Details</string>
    <string name="result">Report Details</string>
    <string name="report">Report</string>
    <string name="device">Device</string>
    <string name="searchdevice">Search Device</string>
    <string name="select_device">Select Device</string>
    <string-array name="devicelist">
        <item >Oximeter</item>
        <item>Glucometer</item>
        <item >Thermometer</item>
        <item >ECG</item>
        <item >Blood Pressure</item>
        <item >Medicine Pill Box</item>
    </string-array>
    <string name="rationale_title">Permission required</string>
    <string name="rationale_message">we need permission for find your <b>Bluetooth</b> </string>
    <string name="NewTest">New Patient</string>
    <string name="retry">Retry</string>
    <string name="GenerateReport">Generate Report</string>
    <string name="reGenerateReport">Re Test</string>
    <string name="SendReport">Submit Report</string>

    <string name="Result">Result:</string>
    <string name="forgetpassword">Forget password?</string>
    <string name="login">Login</string>
    <string name="ReportName">"Report Name: "</string>
    <string name="date">Date:</string>
    <string name="configuration_parameter">Config Param</string>
    <string name="state_parameter">State Param</string>
    <string name="controls_parameter">Controls Param</string>
    <string name="event_parameter">Event Param</string>

    <string name="device_type">Device Type:</string>
    <string name="firmware_version">Firmware Version:</string>
    <string name="registration_type">Registration Type:</string>
    <string name="request_parameter_is_empty_or_error">The request parameter is empty or filled in incorrectly！</string>
    <string name="set_error">Set Error！Exception :</string>
    <string name="device_disconnect">Device disconnect！</string>
    <string name="forced_synchronization">Forced synchronization</string>
    <string name="unforced_synchronization">Unforced synchronization</string>
    <string name="alaram">Alarm</string>
    <string name="feedback">Feedback</string>
</resources>