<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="reportfragment"
            type="com.ipath.hospitaldevice.ui.patientreport.ReportVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/_10mdp"
        tools:context=".ui.searchtest.SearchFragment">

        <!-- TODO: Update blank fragment layout -->

        <androidx.cardview.widget.CardView
            android:id="@+id/personalDetailsCard"
            style="@style/centreLocatorCardDesign"
            android:layout_margin="@dimen/_15mdp"
            app:cardCornerRadius="16dp"
            app:cardElevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:focusableInTouchMode="false"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    android:id="@+id/lblName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/patientname"
                    android:textStyle="bold"
                    android:layout_margin="@dimen/_10mdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/pName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10mdp"
                    android:text="@string/patientname"
                    android:layout_margin="@dimen/_10mdp"
                    app:layout_constraintStart_toEndOf="@+id/lblName"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/lblMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mobno"
                    android:layout_margin="@dimen/_10mdp"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblName" />

                <TextView
                    android:id="@+id/pMobile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_10mdp"
                    android:text="@string/patientname"
                    app:layout_constraintStart_toEndOf="@+id/lblName"
                    app:layout_constraintTop_toBottomOf="@+id/lblName" />

                <TextView
                    android:id="@+id/lblEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textStyle="bold"

                    android:layout_margin="@dimen/_10mdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lblMobile" />

                <TextView
                    android:id="@+id/pEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10mdp"
                    android:text="@string/patientname"
                    android:layout_margin="@dimen/_10mdp"
                    app:layout_constraintStart_toEndOf="@+id/lblName"
                    app:layout_constraintTop_toBottomOf="@+id/lblMobile" />
  <TextView
                    android:id="@+id/lblResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Result"
                    android:textStyle="bold"
      android:layout_margin="@dimen/_10mdp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/pEmail" />

                <TextView
                    android:id="@+id/pResult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_10mdp"
                    app:layout_constraintStart_toEndOf="@+id/lblName"
                    app:layout_constraintTop_toBottomOf="@+id/pEmail" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_350mdp"
                   android:gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="vertical"
                    app:layout_constraintTop_toBottomOf="@+id/pResult"
                    tools:layout_editor_absoluteX="20dp">

                    <Button
                        android:id="@+id/btnSendReport"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginVertical="@dimen/_10mdp"
                        android:layout_marginTop="@dimen/_10mdp"
                        android:background="@drawable/centre_button"
                        android:text="@string/SendReport"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toStartOf="@+id/btnNewTest"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/pResult" />

                    <Button
                        android:id="@+id/btnNewTest"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginVertical="@dimen/_10mdp"
                        android:layout_marginTop="@dimen/_10mdp"
                        android:background="@drawable/centre_button"
                        android:text="@string/NewTest"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btnSendReport"
                        app:layout_constraintTop_toBottomOf="@+id/pResult" />

                    <Button
                        android:id="@+id/btnReg"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginVertical="@dimen/_10mdp"
                        android:layout_marginTop="@dimen/_10mdp"
                        android:background="@drawable/centre_button"
                        android:text="@string/SendReport"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toStartOf="@+id/btnNewTest"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/btnSendReport" />

                    <Button
                        android:id="@+id/btnExit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:layout_marginVertical="@dimen/_10mdp"
                        android:layout_marginTop="@dimen/_10mdp"
                        android:background="@drawable/centre_button"
                        android:text="@string/NewTest"
                        android:textColor="@color/white"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/btnSendReport"
                        app:layout_constraintTop_toBottomOf="@+id/btnNewTest" />
                </LinearLayout>




                <!--                android:onClick="@{()->patientVM.navigator.onClicked()}"-->
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>